@@ -4,35 +4,6 @@ apply plugin: 'kotlin-android'
 android {
     compileSdkVersion 35
 
-    dependencies {
-        implementation "com.android.support:support-v4:33.0.0"
-        implementation "org.jsoup:jsoup:1.12.1"
-        implementation 'com.github.ankidroid:Anki-Android:v2.17alpha8'
-        implementation 'com.squareup.retrofit2:retrofit:2.0.1'
-        implementation 'com.google.code.gson:gson:2.10.1'
-        implementation 'com.squareup.retrofit2:converter-gson:2.0.1'
-        implementation "com.squareup.okhttp3:okhttp:4.9.1"
-        implementation 'androidx.test.espresso:espresso-idling-resource:3.6.1'
-        implementation "androidx.camera:camera-camera2:1.4.2"
-        implementation "androidx.camera:camera-lifecycle:1.4.2"
-        implementation "androidx.camera:camera-view:1.4.2"
-        implementation 'com.vanniktech:android-image-cropper:4.6.0'
-        implementation 'com.google.android.exoplayer:exoplayer:2.19.1'
-    }
-
-    dependencies {
-        // Required -- JUnit 4 framework
-        testImplementation "junit:junit:4.13.2"
-        // Optional -- Robolectric environment
-        testImplementation "androidx.test:core:1.7.0"
-        // Optional -- Mockito framework
-        testImplementation "org.mockito:mockito-core:5.21.0"
-        // Optional -- mockito-kotlin
-        testImplementation "org.mockito.kotlin:mockito-kotlin:6.2.3"
-        // Optional -- Mockk framework
-        testImplementation "io.mockk:mockk:1.14.9"
-    }
-
     defaultConfig {
         applicationId "se.whitchurch.nordict"
         minSdkVersion 28
@@ -53,6 +24,17 @@ android {
 
     testOptions {
         unitTests.includeAndroidResources = true
+        unitTests.all {
+            jvmArgs += [
+                    '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+                    '--add-opens', 'java.base/java.util=ALL-UNNAMED',
+                    '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+                    '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
+                    '--add-opens', 'java.base/java.text=ALL-UNNAMED',
+                    '--add-opens', 'java.desktop/java.awt.font=ALL-UNNAMED',
+                    '--add-opens', 'java.base/jdk.internal.reflect=ALL-UNNAMED'
+            ]
+        }
     }
 
     compileOptions {
@@ -65,20 +47,42 @@ android {
     }
     namespace 'se.whitchurch.nordict'
 }
+
 repositories {
     mavenCentral()
 }
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.webkit:webkit:1.4.0'
-    testImplementation 'junit:junit:4.12'
-    testImplementation "com.squareup.okhttp3:okhttp:4.1.0"
+    implementation "com.android.support:support-v4:33.0.0"
+    implementation "org.jsoup:jsoup:1.12.1"
+    implementation 'com.github.ankidroid:Anki-Android:v2.17alpha8'
+    implementation 'com.squareup.retrofit2:retrofit:2.0.1'
+    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.0.1'
+    implementation "com.squareup.okhttp3:okhttp:4.9.1"
+    implementation 'androidx.test.espresso:espresso-idling-resource:3.6.1'
+    implementation "androidx.camera:camera-camera2:1.4.2"
+    implementation "androidx.camera:camera-lifecycle:1.4.2"
+    implementation "androidx.camera:camera-view:1.4.2"
+    implementation 'com.vanniktech:android-image-cropper:4.6.0'
+    implementation 'com.google.android.exoplayer:exoplayer:2.19.1'
+
+    // Test dependencies
+    testImplementation "junit:junit:4.13.2"
+    testImplementation "androidx.test:core:1.7.0"
+    testImplementation "org.robolectric:robolectric:4.13"
     testImplementation "com.google.truth:truth:1.0"
-    testImplementation 'androidx.test:core:1.2.0'
-    testImplementation "org.robolectric:robolectric:4.3"
+    testImplementation "com.squareup.okhttp3:okhttp:4.9.1"
+    testImplementation "org.mockito:mockito-core:5.21.0"
+    testImplementation "org.mockito.kotlin:mockito-kotlin:6.2.3"
+    testImplementation "io.mockk:mockk:1.14.9"
+
+    // Android Test dependencies
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-web:3.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.2.0'
@@ -87,6 +91,7 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.2.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
 }
+
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(17)
